--- a/templates/profile.html
+++ b/templates/profile.html
@@ -75,7 +75,7 @@
                             {% endif %}
                             <div class="card-content white-text">
                                 <span class="card-title"><strong>{{ word.name }}</strong></span>
-                                <p>{{ word.meaning }}</p>
+                                <p>{{ word.meaning|truncate(115, True) }}</p>
                             </div>
                             <div class="link-to-word card-action">
                                 <a href="{{ url_for('word_page', word_Id=word._id) }}">Click here to find out more!</a>
@@ -97,7 +97,7 @@
                             {% endif %}
                             <div class="card-content white-text">
                                 <span class="card-title"><strong>{{ word.name }}</strong></span>
-                                <p>{{ word.meaning }}</p>
+                                <p>{{ word.meaning|truncate(115, True) }}</p>
                             </div>
                             <div class="link-to-word card-action">
                                 <a href="{{ url_for('word_page', word_Id=word._id) }}">Click here to find out more!</a>
