Add rating to word summaries

--- a/templates/all_words.html
+++ b/templates/all_words.html
@@ -82,6 +82,7 @@
                     </div>
                     <div class="link-to-word card-action">
                         <a href="{{ url_for('word_page', word_Id=word._id) }}">Click here to find out more!</a>
+                        <span class="right">{{ word.rating }}</span>
                     </div>
                 </div>
             </div>
