--- a/templates/display_by_letter.html
+++ b/templates/display_by_letter.html
@@ -24,7 +24,7 @@
             <a class='dropdown-trigger btn amber darken-2' href='#' data-target='lettersDropdown'>
                 Letters A-Z <i class="material-icons">arrow_drop_down</i>
             </a>
-            <a class='dropdown-trigger btn right grey darken-3' href='#' data-target='sortDropdown'>
+            <a class='sort-button dropdown-trigger btn right grey darken-3' href='#' data-target='sortDropdown'>
                 Order Words By <i class="material-icons">arrow_drop_down</i>
             </a>
         </div>
