--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -38,7 +38,7 @@
                     <a class="btn-large amber darken-2" href="{{ url_for('profile', user_id=session['id']) }}">
                         Cancel <i class="small material-icons">close</i>
                     </a>
-                    <button class="btn-large blue" type="submit">Submit <i class="small material-icons">check</i></button>
+                    <button class="sort-button btn-large blue" type="submit">Submit <i class="small material-icons">check</i></button>
                 </div>
             </div>
         </form>
