--- a/templates/home.html
+++ b/templates/home.html
@@ -39,6 +39,12 @@
         </div>
     </div>
 
+    {% if session.user %}
+    <div class="center">
+        <a href="{{ url_for('new_word') }}" class="new-word-call-to-action text-shadow">Add a New Word!</a>
+    </div>
+    {% endif %}
+
     <h4 class="center main-heading">Featured Words</h4>
 
     <div class="row featured-words">
